--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # created by virtualenv automatically
 venv
 .idea
+__pycache__
 .DS_STORE
 *.pyc
-secrets.py
+python_scripts/secrets.py
 graph.html
